# digital-diary

./: Cargo.toml  LICENSE  README.md
src/: diary.rs  main.rs
