[package]
name = "digital-diary"
version = "0.2.1"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
edition = "2018"

[[bin]]
name = "didi"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
ansi_term = "0.12"
rusqlite = { version= "0.20", features = ["chrono"] }
chrono = "0.4"
sha2 = "0.8"
dirs = "2.0"
whoami = "0.6"
text_io = "0.1"
hex = "0.4"
termsize = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
